--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,14 @@
 
     <!-- APP PERMISSIONS -->
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <!-- needed to download data from archive.org -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <!-- need to get current settings of our sync adapter -->
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
@@ -32,15 +37,22 @@
         >
 
         <!-- ACTIVITIES -->
-
-
-        <!-- the main activity that serves as the application's entry point -->
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.BrowserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+
+        <!-- the main activity that serves as the application's entry point -->
+        <activity android:name=".MainActivity">
+            <!--intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter-->
         </activity>
 
         <!-- CONTENT PROVIDERS -->
@@ -87,22 +99,24 @@
                 />
         </service>
 
-
-
-        <!-- A receiver that will receive media buttons and send as intents to our MusicService implementation.
+        <!--
+             A receiver that will receive media buttons and send as intents to our MusicService implementation.
             Required on pre-Lollipop. More information at:
-            http://developer.android.com/reference/android/support/v4/media/session/MediaButtonReceiver.html -->
-        <receiver android:name="android.support.v4.media.session.MediaButtonReceiver" >
+            http://developer.android.com/reference/android/support/v4/media/session/MediaButtonReceiver.html
+        -->
+        <receiver android:name="android.support.v4.media.session.MediaButtonReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.MEDIA_BUTTON" />
+                <action android:name="android.intent.action.MEDIA_BUTTON"/>
             </intent-filter>
         </receiver>
+
         <service
             android:name=".service.MusicService"
             android:exported="true"
             tools:ignore="ExportedService"
             >
         </service>
+
     </application>
 
 </manifest>
